add_library( opgen-epsilon

   P2ElementwiseEpsilonAnnulusMap_0_0.cpp
   P2ElementwiseEpsilonAnnulusMap_0_0.hpp
   P2ElementwiseEpsilonAnnulusMap_0_1.cpp
   P2ElementwiseEpsilonAnnulusMap_0_1.hpp
   P2ElementwiseEpsilonAnnulusMap_1_0.cpp
   P2ElementwiseEpsilonAnnulusMap_1_0.hpp
   P2ElementwiseEpsilonAnnulusMap_1_1.cpp
   P2ElementwiseEpsilonAnnulusMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_0_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_1_2.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_0.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_1.hpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.cpp
   P2ElementwiseEpsilonIcosahedralShellMap_2_2.hpp
   P2ElementwiseEpsilon_0_0.cpp
   P2ElementwiseEpsilon_0_0.hpp
   P2ElementwiseEpsilon_0_1.cpp
   P2ElementwiseEpsilon_0_1.hpp
   P2ElementwiseEpsilon_0_2.cpp
   P2ElementwiseEpsilon_0_2.hpp
   P2ElementwiseEpsilon_1_0.cpp
   P2ElementwiseEpsilon_1_0.hpp
   P2ElementwiseEpsilon_1_1.cpp
   P2ElementwiseEpsilon_1_1.hpp
   P2ElementwiseEpsilon_1_2.cpp
   P2ElementwiseEpsilon_1_2.hpp
   P2ElementwiseEpsilon_2_0.cpp
   P2ElementwiseEpsilon_2_0.hpp
   P2ElementwiseEpsilon_2_1.cpp
   P2ElementwiseEpsilon_2_1.hpp
   P2ElementwiseEpsilon_2_2.cpp
   P2ElementwiseEpsilon_2_2.hpp
   P2VectorElementwiseEpsilon.cpp
   P2VectorElementwiseEpsilon.hpp
   P2VectorElementwiseEpsilonAnnulusMap.cpp
   P2VectorElementwiseEpsilonAnnulusMap.hpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.cpp
   P2VectorElementwiseEpsilonIcosahedralShellMap.hpp
)

if(HYTEG_BUILD_WITH_AVX AND WALBERLA_DOUBLE_ACCURACY)
   target_sources(opgen-epsilon PRIVATE

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrix_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrix_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrix_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrix_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrix_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrix_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_3D.cpp
   )

   set_source_files_properties(

      avx/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      avx/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      avx/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp

      PROPERTIES COMPILE_OPTIONS ${HYTEG_COMPILER_NATIVE_FLAGS}
   )
else()
   if(HYTEG_BUILD_WITH_AVX AND NOT WALBERLA_DOUBLE_ACCURACY)
      message(WARNING "AVX vectorization only available in double precision. Using scalar kernels.")
   endif()

   target_sources(opgen-epsilon PRIVATE

      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_apply_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_apply_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_0_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_apply_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_0_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_apply_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonAnnulusMap_1_1_toMatrix_P2ElementwiseEpsilonAnnulusMap_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_0_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_1_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_0_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_1_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_apply_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilonIcosahedralShellMap_2_2_toMatrix_P2ElementwiseEpsilonIcosahedralShellMap_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_apply_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_0_toMatrix_P2ElementwiseEpsilon_0_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_apply_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_0_1_toMatrix_P2ElementwiseEpsilon_0_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_apply_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_0_2_toMatrix_P2ElementwiseEpsilon_0_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_apply_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_0_toMatrix_P2ElementwiseEpsilon_1_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_apply_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_2D.cpp
      noarch/P2ElementwiseEpsilon_1_1_toMatrix_P2ElementwiseEpsilon_1_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_apply_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_1_2_toMatrix_P2ElementwiseEpsilon_1_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_apply_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_0_toMatrix_P2ElementwiseEpsilon_2_0_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_apply_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_1_toMatrix_P2ElementwiseEpsilon_2_1_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_apply_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_computeInverseDiagonalOperatorValues_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2ElementwiseEpsilon_2_2_toMatrix_P2ElementwiseEpsilon_2_2_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_apply_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonAnnulusMap_toMatrix_P2VectorElementwiseEpsilonAnnulusMap_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_apply_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilonIcosahedralShellMap_toMatrix_P2VectorElementwiseEpsilonIcosahedralShellMap_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_apply_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_computeInverseDiagonalOperatorValues_P2VectorElementwiseEpsilon_macro_3D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_2D.cpp
      noarch/P2VectorElementwiseEpsilon_toMatrix_P2VectorElementwiseEpsilon_macro_3D.cpp
   )
endif()

if (HYTEG_BUILD_WITH_PETSC)
   target_link_libraries(opgen-epsilon PUBLIC PETSc::PETSc)
endif ()
if (WALBERLA_BUILD_WITH_HALF_PRECISION_SUPPORT)
    target_compile_features(opgen-epsilon PUBLIC cxx_std_23)
else ()
    target_compile_features(opgen-epsilon PUBLIC cxx_std_17)
endif ()
